<resources>
    <string name="app_name">Ficheros</string>
    <string name="ejercicio_1">Escribir interna</string>
    <string name="ejercicio_2">Escribir externa</string>
    <string name="ejercicio_3">Leer ficheros</string>
    <string name="ejercicio_4">Codificación</string>
    <string name="ejercicio_5">Exploración</string>
    <string name="operando_1">Operando 1</string>
    <string name="operando_2">Operando 2</string>
    <string name="mas">+</string>
    <string name="resultado">Resultado:</string>
    <string name="propiedades">Propiedades:</string>
</resources>
