<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.usuario.ficheros.EscribirInterna">

    <TextView
        android:id="@+id/txv_operando1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operando_1"
        />

    <EditText
        android:id="@+id/edt_operando1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:id="@+id/txv_operando2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operando_2"
        />

    <EditText
        android:id="@+id/edt_operando2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_mas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mas"
        />

    <TextView
        android:id="@+id/txv_resultado_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        />

    <TextView
        android:id="@+id/txv_resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/txv_propiedades_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/propiedades"
        />

    <TextView
        android:id="@+id/txv_propiedades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>
